[gd_scene load_steps=4 format=3 uid="uid://dcus1jwcc0x4v"]

[ext_resource type="Script" path="res://Scenes/Entities/buro.gd" id="1_1o6uf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g4186"]
radius = 9.0

[sub_resource type="QuadMesh" id="QuadMesh_rriiy"]

[node name="Buro" type="Node2D"]
script = ExtResource("1_1o6uf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g4186")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0.97871, 0.856598, 0.507762, 1)
scale = Vector2(14.5, 10.5)
mesh = SubResource("QuadMesh_rriiy")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
